--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"js\" --ignore \"src/**/*.spec.js,src/**/*.json\" --exec \"nodemon src/server.js\"",
-    "test": "jest",
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "keywords": [],
@@ -25,13 +25,16 @@
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "sinon": "^14.0.0",
     "supertest": "^6.2.4"
   }
 }
