--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"js\" --ignore \"src/**/*.spec.js,src/**/*.json\" --exec \"nodemon src/server.js\"",
     "test:unit": "mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
+    "test:unit:coverage": "nyc --reporter=text mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "keywords": [],
@@ -33,6 +34,7 @@
     "jest": "^28.1.3",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4"
