refact: set alternatives database names in database config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"js\" --ignore \"src/**/*.spec.js,src/**/*.json\" --exec \"nodemon src/server.js\"",
+    "test": "mocha ./__tests__/integration/**/*$NAME*.test.js --exit",
     "test:unit": "mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "test:unit:coverage": "nyc --reporter=text mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
