chore: sequelize scripts

--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "main": "index.js",
   "scripts": {
+    "prestart": "sequelize-cli db:drop && npm run db:create && npm run db:migrate && npm run db:seeds",
     "start": "node src/server.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"js\" --ignore \"src/**/*.spec.js,src/**/*.json\" --exec \"nodemon src/server.js\"",
     "test": "mocha ./__tests__/integration/**/*$NAME*.test.js --exit",
     "test:unit": "mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "test:unit:coverage": "nyc --reporter=text mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "db:create": "sequelize-cli db:create",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:seeds": "sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
