--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prestart": "sequelize-cli db:drop && npm run db:create && npm run db:migrate && npm run db:seeds",
     "start": "npm run prestart && node src/server.js",
     "dev": "nodemon --watch \"./src/**\" --ext \"js\" --ignore \"src/**/*.spec.js,src/**/*.json\" --exec \"nodemon src/server.js\"",
-    "test": "mocha ./__tests__/integration/**/*$NAME*.test.js --exit",
+    "test": "APP_ENVIRONMENT=test npm run prestart && mocha ./__tests__/integration/**/*$NAME*.test.js --exit",
     "test:unit": "mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "test:unit:coverage": "nyc --reporter=text mocha ./__tests__/unit/**/*$NAME*.test.js --exit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
